# AgenticNewspaper

./: .gitignore  AGENT.md  CHARM-OF-NAMING.md  CLAUDE.md  DEPLOYMENT.md  HANDOFF.md  README.md  TODOS.md  intelligent-news-aggregator-spec-v2.md  intelligent-news-aggregator-spec.md  news-aggregator-architecture_linked.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  quick-start-implementation.md  secrets_template.json  spec_linked.md
.github/workflows/: deploy-cloudflare.yml  deploy-hetzner.yml  deploy.yml
config/: user-preferences-template.yaml
docs/: HETZNER_ON_DEMAND.md  development-phases.md  feedback-system.md  mcp-subagent-architecture.md  v3-spec-hybrid-architecture.md
docs/architecture/: news-aggregator-architecture-v2.md  news-aggregator-architecture.md
docs/implementation/: README.md  agents.md  api-routes.md  database.md  durable-objects.md  providers.md  storage.md
docs/specs/: spec.md
outputs/daily_digests/: 2025-10-23.md
references/: amber-patterns.md  forage-patterns.md  grovebloom-patterns.md  groveengine-patterns.md
shared/: prompts.json
src/agents/tier2_reasoning/: synthesis_agent.py
src/mcp_servers/: base_provider.py  factory.py
src/utils/: config_loader.py  mock_clients.py
tests/: test_agent_sdk_connection.py  test_mcp_server.py
