[project]
name = "intelligent-news-aggregator"
version = "0.1.0"
description = "Personalized news digest with Agent SDK + MCP"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "newspaper3k>=0.2.8",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.8.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
